# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.30.4
	Martin Väth <martin at mvath.de>:
	- Fix gdb instructions

*eix-0.30.3
	Martin Väth <martin at mvath.de>:
	- eix-sync: Add -vn (verbose dry-run) options, see
	  https://bugs.gentoo.org/show_bug.cgi?id=509750
	- Fix more wrong usages of getline(), see
	  https://bugs.gentoo.org/show_bug.cgi?id=506106
	- Fix include files for ioctl() on solaris, see
	  https://bugs.gentoo.org/show_bug.cgi?id=510120
	- Trigger clang/gcc/glibc incompatibility when testing for c++1y, see
	  https://bugs.gentoo.org/show_bug.cgi?id=510102
	- Russian translation: Improve spacing for eix-test-obsolete, and
	  https://developer.berlios.de/bugs/?func=detailbug&bug_id=19366&
	  group_id=11597

*eix-0.30.2
	Martin Väth <martin at mvath.de>:
	- Move repository to GitHub since BerliOS closes
	- Fix wrong usage of getline(), see
	  https://bugs.gentoo.org/show_bug.cgi?id=506106
	- Prefer eix::format over printf
	- Introduce REQUIRE_DROP, NODROP_FATAL, see
	  https://bugs.gentoo.org/show_bug.cgi?id=499944
	- Use gcc-4.9 features if available
	- Initialize bools to make gcc-4.9 diagnostics happy
	- Add tmpfiles.d/eix.conf default
	- scripts: act as with USE_NLS=no if gettext.sh cannot be found, see
	  https://bugs.gentoo.org/show_bug.cgi?id=500130
	- Several translation fixes for German. Thanks to
	  André Jaenisch <andre.jaenisch at openmailbox.org>,
	  Dominik Geyer <dominik.geyer at gmail.com>, and
	  Justin Lechner <jlec at gentoo.org>
	- manpage: Add reference to color variables in FAQ and fix typos from
	  https://bugs.gentoo.org/show_bug.cgi?id=499932

*eix-0.30.1
	Martin Väth <martin at mvath.de>:
	- Add maskreason to --xml output
	- Update email
	- internal: remove redundant ATTRIBUTE_NONNULL
	- contrib/make.sh: Fix ccache handling
	- Check whether dropping of permissions worked
	- Fix message if EIX_LIMIT{,_COMPACT} equals number of all packages
	  output, see https://bugs.gentoo.org/show_bug.cgi?id=497232